--- a/estilo.css
+++ b/estilo.css
@@ -2,6 +2,9 @@ h1 {
     text-align: center;
     font-style: italic;
 }
+body{
+  background-color: #1ff802;
+}
 h2{
     color:darkred;
     text-align: center;
@@ -42,7 +45,7 @@ header #lista{
     display: flex;
     padding: 10px;
     height: 50px;
-    background-color: black;
+    background-color: #283149; /* Color Negro Azulado */
   }
   
   
@@ -129,4 +132,98 @@ header #lista{
     display: flex;
     flex-direction: row;
     text-align: center;    
+  }
+  footer {
+    background-color: #0d1f4e; /* Color Negro Azulado */
+    color: #ffffff; /* Color Blanco */
+    font-size: medium; /* Tamaño de letra mediano */
+    text-align: center; /* Centrar el texto */
+    height: 100px; /* Altura del footer */
+    line-height: 100px; /* Ajuste vertical del texto */
+  }
+  
+  .footer-text {
+    margin: 0; /* Eliminar margen predeterminado */
+  }
+  .saludo-button {
+    border-radius: 20px; /* Estilo redondeado del botón */
+    padding: 10px 20px; /* Espaciado interno del botón */
+    background-color: #3b0149; /* Color de fondo del botón */
+    color: #ffffff; /* Color del texto del botón */
+    font-size: medium; /* Tamaño de letra del botón */
+    border: none; /* Eliminar borde del botón */
+  }
+  
+  .saludo-button:hover {
+    background-color: #0900b7; /* Color de fondo del botón al pasar el cursor */
+    cursor: pointer; /* Cambiar el cursor al pasar el cursor sobre el botón */
+  }
+  .video-container {
+    position: relative;
+    width: 100%;
+    max-width: 560px; /* Ajusta el ancho máximo según tus necesidades */
+    height: 0;
+    padding-bottom: 31.25%; /* Proporción de aspecto 16:9 */
+    margin: 0 auto; /* Centrar el contenedor horizontalmente */
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  }
+  .services-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: flex-start;
+    list-style: none;
+    padding: 0;
+  }
+  
+  .services-list li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+    text-align: center;
+    width: 200px;
+  }
+  
+  .services-list img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-bottom: 10px;
+  }
+  
+  /* Estilos para dispositivos móviles */
+  @media (max-width: 768px) {
+    .services-list li {
+      width: 100%;
+      margin: 10px;
+    }
+  }
+  
+  /* Estilos para tablet */
+  @media (min-width: 769px) and (max-width: 1024px) {
+    .services-list li {
+      width: 33.33%;
+    }
+  }
+  
+  /* Estilos para monitores de escritorio */
+  @media (min-width: 1025px) {
+    .services-list li {
+      width: 25%;
+    }
+  }
+  .services-heading {
+    text-align: center;
   }
